[fix] remove cozy-bar z-index override

--- a/src/styles/breadcrumb.styl
+++ b/src/styles/breadcrumb.styl
@@ -87,10 +87,3 @@ $coz-bar-size = 40px
         .fil-path-current
             height     $coz-bar-size
             box-shadow inset 0 -1px 0 0 grey-09
-
-    :global
-        [role=banner] .coz-bar-title
-            display none
-
-        [role=banner][data-drawer-visible="true"]
-            z-index $nav-index + 1
